tests/negative/other/function_inferred_return_array_assignment_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Inferred array return types must still be checked on assignment.

function ids() {
    return [1, 2, 3];
}

function main() {
    let names: string[] = ids();
    print(names);
}
